--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,10 @@ label{
     margin-bottom: 5px;
     font-weight: bold;
 }
+
+input, select{
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
